[gd_scene load_steps=3 format=2]

[ext_resource path="res://themes/DungeonFalls_Core.tres" type="Theme" id=1]
[ext_resource path="res://scripts/UI/ConfirmPopup.gd" type="Script" id=2]

[node name="ConfirmPopup" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1305.0
margin_bottom = -940.0
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.36018
margin_top = 8.36018
margin_right = -8.56409
margin_bottom = -8.56409
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 588.0
margin_bottom = 113.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 578.0
margin_bottom = 40.0
size_flags_vertical = 6
text = "This is a label!"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 578.0
margin_bottom = 103.0

[node name="BTN_Confirm" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 190.0
margin_bottom = 39.2487
size_flags_horizontal = 3
text = "Confirm"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 194.0
margin_right = 384.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="BTN_Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 388.0
margin_right = 578.0
margin_bottom = 39.2487
size_flags_horizontal = 3
text = "Cancel"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BTN_Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BTN_Cancel" to="." method="_on_cancel_pressed"]
